# Taranis-NG

./: .pre-commit-config.yaml  git_version.txt  pyproject.toml
docker/: .env  Dockerfile.bots  Dockerfile.collectors  Dockerfile.core  Dockerfile.keycloak  Dockerfile.presenters  Dockerfile.publishers  Dockerfile.web  docker-compose.keycloak.yml  docker-compose.yml
src/bots/: pyproject.toml  requirements.txt
src/collectors/: pyproject.toml  requirements.txt
src/collectors/collectors/: web_collector.py
src/core/: config.py  pyproject.toml  requirements.txt
src/core/api/: analyze.py  keycloak.py  publish.py
src/core/auth/: keycloak_authenticator.py
src/core/model/: news_item.py  product.py  report_item.py
src/gui/: package-lock.json  package.json
src/gui-v3/: package-lock.json  package.json
src/gui-v3/src/components/assess/: NewsItemDetailDialog.vue
src/gui-v3/src/i18n/: cs.json  en.json  sk.json
src/gui/src/: router.js
src/gui/src/api/: analyze.js  assess.js  publish.js
src/gui/src/assets/: layout_config.js
src/gui/src/components/analyze/: ContentDataAnalyze.vue  NewReportItem.vue  ToolbarFilterAnalyze.vue  ToolbarGroupAnalyze.vue
src/gui/src/components/assess/: ContentDataAssess.vue  ToolbarFilterAssess.vue  ToolbarGroupAssess.vue  card_mixin.js
src/gui/src/components/common/: Notification.vue
src/gui/src/i18n/cs/: messages.js
src/gui/src/views/: Login.vue
src/keycloak/: realm-export.json
src/presenters/: pyproject.toml  requirements.txt
src/publishers/: pyproject.toml  requirements.txt
src/shared/: pyproject.toml
src/web/: Makefile  README.md  process-incoming.sh  pyproject.toml  requirements.txt  rescan.sh  start.sh
src/web/conf/: config.ini  language.json  warden_apply.sh  warden_client.cfg
src/web/lib/: __init__.py  config_reader.py  logger.py  playground.py
src/web/lib/event/: __init__.py  history.py  idea.py  rescan.py  sner.py
src/web/lib/report/: __init__.py  process_incoming.py  report_item.py  vulnerability_report.py
src/web/lib/test/: conftest.py  expected_idea.json  report_test.json  test_events.py  test_history.py  test_reports.py  test_web.py  test_webui.py
src/web/lib/test/invalid_reports/: overview_invalid10_missing_name.json  overview_invalid11_missing_attrs.json  overview_invalid13_missing_desc.json  overview_invalid14_wrong_cve.json  overview_invalid15_wrong_cwe.json  overview_invalid16_missing_affected_systems.json  overview_invalid1_missing_product.json  overview_invalid20_tlp_red.json  overview_invalid21_tlp_amber.json  overview_invalid22_tlp_green.json  overview_invalid2_missing_id.json  overview_invalid3_missing_tlp.json  overview_invalid4_missing_desc.json  overview_invalid5_missing_publish_date.json  overview_invalid6_missing_author.json  overview_invalid7_missing_report_items.json  overview_invalid8_missing_title.json
src/web/lib/version_parser/: __init__.py  requirements.pip
src/web/lib/version_parser/test/: test_parser.py
src/web/lib/warden/: README  __init__.py
src/web/lib/web/: __init__.py  app.py  app.wsgi  cache.py  exceptions.py  routes.py
src/web/lib/web/static/: styles.css
src/web/lib/web/templates/: _macros.html  error.html  homepage.html  main.html  report.html
src/web/reports/: example.json  example_cz.json
(+7 files in other folders)
